--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
+    "@types/validator": "^13.7.1",
     "typescript": "^4.3.5"
   }
 }
