--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
+    "@types/nodemailer": "^6.4.4",
     "avataaars": "^2.0.0",
     "contentful": "^9.1.12",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
