--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@types/nodemailer": "^6.4.4",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "avataaars": "^2.0.0",
     "contentful": "^9.1.12",
     "date-fns": "^2.11.1",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.5",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0",
     "validator": "^13.7.0"
