--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
+    "@sendgrid/mail": "^7.6.2",
     "@types/nodemailer": "^6.4.4",
     "@types/react-syntax-highlighter": "^13.5.2",
     "avataaars": "^2.0.0",
@@ -21,7 +22,6 @@
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
-    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-syntax-highlighter": "^15.4.5",
